<resources>
    <string name="app_name">LAB3</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="backspace">←</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plusMinus">±</string>
    <string name="rootSqr">√</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="multiply">*</string>
    <string name="oneOfX">1/x</string>
    <string name="dot">.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>


</resources>