<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    android:background="#D9E3F0"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalculations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        android:layout_weight="1"
        android:textAlignment="textEnd"
        android:background="#F0F6FC"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:padding="16dp"
        android:layout_weight="2"
        android:textAlignment="viewEnd"
        android:gravity="bottom"
        android:text="0"
        android:background="#F0F6FC"
        android:textSize="40sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btnMC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/mc" />
        <Button
            android:id="@+id/btnMR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/mr" />
        <Button
            android:id="@+id/btnMS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/ms" />
        <Button
            android:id="@+id/btnMplus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/mplus" />
        <Button
            android:id="@+id/btnMminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/mminus" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btnBackSpace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/backspace" />
        <Button
            android:id="@+id/btnCE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/ce" />
        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/c" />
        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/plusMinus" />
        <Button
            android:id="@+id/btnRootSqr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/rootSqr" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClick"
            android:background="#ECF1F9"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/seven" />
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ECF1F9"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/eight" />
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ECF1F9"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/nine" />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/divide" />
        <Button
            android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/percent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ECF1F9"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/four" />
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ECF1F9"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/five" />
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ECF1F9"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/six" />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/multiply" />
        <Button
            android:id="@+id/btnOneOfX"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3DEEB"
            android:layout_marginRight="1pt"
            android:layout_marginTop="1pt"
            android:layout_marginBottom="1pt"
            android:layout_marginLeft="1pt"
            android:textSize="10pt"
            android:text="@string/oneOfX" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ECF1F9"
                        android:layout_marginRight="1pt"
                        android:layout_marginTop="1pt"
                        android:layout_marginBottom="1pt"
                        android:layout_marginLeft="1pt"
                        android:textSize="10pt"
                        android:text="@string/one" />
                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ECF1F9"
                        android:layout_marginRight="1pt"
                        android:layout_marginTop="1pt"
                        android:layout_marginBottom="1pt"
                        android:layout_marginLeft="1pt"
                        android:textSize="10pt"
                        android:text="@string/two" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="0"
                    >
                    <Button
                        android:id="@+id/btn0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ECF1F9"
                        android:layout_marginRight="1pt"
                        android:layout_marginTop="1pt"
                        android:layout_marginBottom="1pt"
                        android:layout_marginLeft="1pt"
                        android:textSize="10pt"
                        android:text="@string/zero" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ECF1F9"
                        android:layout_marginRight="1pt"
                        android:layout_marginTop="1pt"
                        android:layout_marginBottom="1pt"
                        android:layout_marginLeft="1pt"
                        android:textSize="10pt"
                        android:text="@string/three" />
                    <Button
                        android:id="@+id/btnDot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ECF1F9"
                        android:layout_marginRight="1pt"
                        android:layout_marginTop="1pt"
                        android:layout_marginBottom="1pt"
                        android:layout_marginLeft="1pt"
                        android:textSize="10pt"
                        android:text="@string/dot" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnMinus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#D3DEEB"
                        android:layout_marginRight="1pt"
                        android:layout_marginTop="1pt"
                        android:layout_marginBottom="1pt"
                        android:layout_marginLeft="1pt"
                        android:textSize="10pt"
                        android:text="@string/minus" />
                    <Button
                        android:id="@+id/btnPlus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#D3DEEB"
                        android:layout_marginRight="1pt"
                        android:layout_marginTop="1pt"
                        android:layout_marginBottom="1pt"
                        android:layout_marginLeft="1pt"
                        android:textSize="10pt"
                        android:text="@string/plus" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnEqual"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#D3DEEB"
                        android:layout_marginRight="1pt"
                        android:layout_marginTop="1pt"
                        android:layout_marginBottom="1pt"
                        android:layout_marginLeft="1pt"
                        android:textSize="10pt"
                        android:text="@string/equal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>